tests/unit_tests/io/snapshots/unit__unit_tests__io__msh__load_msh_cube_hex27.snap
---
source: tests/unit_tests/io/msh.rs
expression: mesh
---
Mesh {
    vertices: [
        [
            0.0,
            0.0,
            0.0,
        ],
        [
            0.5,
            0.0,
            0.0,
        ],
        [
            1.0,
            0.0,
            0.0,
        ],
        [
            0.0,
            0.5,
            0.0,
        ],
        [
            0.5,
            0.5,
            0.0,
        ],
        [
            1.0,
            0.5,
            0.0,
        ],
        [
            0.0,
            1.0,
            0.0,
        ],
        [
            0.5,
            1.0,
            0.0,
        ],
        [
            1.0,
            1.0,
            0.0,
        ],
        [
            0.0,
            0.0,
            0.5,
        ],
        [
            0.5,
            0.0,
            0.5,
        ],
        [
            1.0,
            0.0,
            0.5,
        ],
        [
            0.0,
            0.5,
            0.5,
        ],
        [
            0.5,
            0.5,
            0.5,
        ],
        [
            1.0,
            0.5,
            0.5,
        ],
        [
            0.0,
            1.0,
            0.5,
        ],
        [
            0.5,
            1.0,
            0.5,
        ],
        [
            1.0,
            1.0,
            0.5,
        ],
        [
            0.0,
            0.0,
            1.0,
        ],
        [
            0.5,
            0.0,
            1.0,
        ],
        [
            1.0,
            0.0,
            1.0,
        ],
        [
            0.0,
            0.5,
            1.0,
        ],
        [
            0.5,
            0.5,
            1.0,
        ],
        [
            1.0,
            0.5,
            1.0,
        ],
        [
            0.0,
            1.0,
            1.0,
        ],
        [
            0.5,
            1.0,
            1.0,
        ],
        [
            1.0,
            1.0,
            1.0,
        ],
        [
            0.25,
            0.0,
            0.0,
        ],
        [
            0.0,
            0.25,
            0.0,
        ],
        [
            0.0,
            0.0,
            0.25,
        ],
        [
            0.5,
            0.25,
            0.0,
        ],
        [
            0.5,
            0.0,
            0.25,
        ],
        [
            0.25,
            0.5,
            0.0,
        ],
        [
            0.5,
            0.5,
            0.25,
        ],
        [
            0.0,
            0.5,
            0.25,
        ],
        [
            0.25,
            0.0,
            0.5,
        ],
        [
            0.0,
            0.25,
            0.5,
        ],
        [
            0.5,
            0.25,
            0.5,
        ],
        [
            0.25,
            0.5,
            0.5,
        ],
        [
            0.25,
            0.25,
            0.0,
        ],
        [
            0.25,
            0.0,
            0.25,
        ],
        [
            0.0,
            0.25,
            0.25,
        ],
        [
            0.5,
            0.25,
            0.25,
        ],
        [
            0.25,
            0.5,
            0.25,
        ],
        [
            0.25,
            0.25,
            0.5,
        ],
        [
            0.25,
            0.25,
            0.25,
        ],
        [
            0.75,
            0.0,
            0.0,
        ],
        [
            1.0,
            0.25,
            0.0,
        ],
        [
            1.0,
            0.0,
            0.25,
        ],
        [
            0.75,
            0.5,
            0.0,
        ],
        [
            1.0,
            0.5,
            0.25,
        ],
        [
            0.75,
            0.0,
            0.5,
        ],
        [
            1.0,
            0.25,
            0.5,
        ],
        [
            0.75,
            0.5,
            0.5,
        ],
        [
            0.75,
            0.25,
            0.0,
        ],
        [
            0.75,
            0.0,
            0.25,
        ],
        [
            1.0,
            0.25,
            0.25,
        ],
        [
            0.75,
            0.5,
            0.25,
        ],
        [
            0.75,
            0.25,
            0.5,
        ],
        [
            0.75,
            0.25,
            0.25,
        ],
        [
            0.0,
            0.75,
            0.0,
        ],
        [
            0.5,
            0.75,
            0.0,
        ],
        [
            0.25,
            1.0,
            0.0,
        ],
        [
            0.5,
            1.0,
            0.25,
        ],
        [
            0.0,
            1.0,
            0.25,
        ],
        [
            0.0,
            0.75,
            0.5,
        ],
        [
            0.5,
            0.75,
            0.5,
        ],
        [
            0.25,
            1.0,
            0.5,
        ],
        [
            0.25,
            0.75,
            0.0,
        ],
        [
            0.0,
            0.75,
            0.25,
        ],
        [
            0.5,
            0.75,
            0.25,
        ],
        [
            0.25,
            1.0,
            0.25,
        ],
        [
            0.25,
            0.75,
            0.5,
        ],
        [
            0.25,
            0.75,
            0.25,
        ],
        [
            1.0,
            0.75,
            0.0,
        ],
        [
            0.75,
            1.0,
            0.0,
        ],
        [
            1.0,
            1.0,
            0.25,
        ],
        [
            1.0,
            0.75,
            0.5,
        ],
        [
            0.75,
            1.0,
            0.5,
        ],
        [
            0.75,
            0.75,
            0.0,
        ],
        [
            1.0,
            0.75,
            0.25,
        ],
        [
            0.75,
            1.0,
            0.25,
        ],
        [
            0.75,
            0.75,
            0.5,
        ],
        [
            0.75,
            0.75,
            0.25,
        ],
        [
            0.0,
            0.0,
            0.75,
        ],
        [
            0.5,
            0.0,
            0.75,
        ],
        [
            0.5,
            0.5,
            0.75,
        ],
        [
            0.0,
            0.5,
            0.75,
        ],
        [
            0.25,
            0.0,
            1.0,
        ],
        [
            0.0,
            0.25,
            1.0,
        ],
        [
            0.5,
            0.25,
            1.0,
        ],
        [
            0.25,
            0.5,
            1.0,
        ],
        [
            0.25,
            0.0,
            0.75,
        ],
        [
            0.0,
            0.25,
            0.75,
        ],
        [
            0.5,
            0.25,
            0.75,
        ],
        [
            0.25,
            0.5,
            0.75,
        ],
        [
            0.25,
            0.25,
            1.0,
        ],
        [
            0.25,
            0.25,
            0.75,
        ],
        [
            1.0,
            0.0,
            0.75,
        ],
        [
            1.0,
            0.5,
            0.75,
        ],
        [
            0.75,
            0.0,
            1.0,
        ],
        [
            1.0,
            0.25,
            1.0,
        ],
        [
            0.75,
            0.5,
            1.0,
        ],
        [
            0.75,
            0.0,
            0.75,
        ],
        [
            1.0,
            0.25,
            0.75,
        ],
        [
            0.75,
            0.5,
            0.75,
        ],
        [
            0.75,
            0.25,
            1.0,
        ],
        [
            0.75,
            0.25,
            0.75,
        ],
        [
            0.5,
            1.0,
            0.75,
        ],
        [
            0.0,
            1.0,
            0.75,
        ],
        [
            0.0,
            0.75,
            1.0,
        ],
        [
            0.5,
            0.75,
            1.0,
        ],
        [
            0.25,
            1.0,
            1.0,
        ],
        [
            0.0,
            0.75,
            0.75,
        ],
        [
            0.5,
            0.75,
            0.75,
        ],
        [
            0.25,
            1.0,
            0.75,
        ],
        [
            0.25,
            0.75,
            1.0,
        ],
        [
            0.25,
            0.75,
            0.75,
        ],
        [
            1.0,
            1.0,
            0.75,
        ],
        [
            1.0,
            0.75,
            1.0,
        ],
        [
            0.75,
            1.0,
            1.0,
        ],
        [
            1.0,
            0.75,
            0.75,
        ],
        [
            0.75,
            1.0,
            0.75,
        ],
        [
            0.75,
            0.75,
            1.0,
        ],
        [
            0.75,
            0.75,
            0.75,
        ],
    ],
    connectivity: [
        Hex27Connectivity(
            [
                0,
                1,
                4,
                3,
                9,
                10,
                13,
                12,
                27,
                28,
                29,
                30,
                31,
                32,
                33,
                34,
                35,
                36,
                37,
                38,
                39,
                40,
                41,
                42,
                43,
                44,
                45,
            ],
        ),
        Hex27Connectivity(
            [
                1,
                2,
                5,
                4,
                10,
                11,
                14,
                13,
                46,
                30,
                31,
                47,
                48,
                49,
                50,
                33,
                51,
                37,
                52,
                53,
                54,
                55,
                42,
                56,
                57,
                58,
                59,
            ],
        ),
        Hex27Connectivity(
            [
                3,
                4,
                7,
                6,
                12,
                13,
                16,
                15,
                32,
                60,
                34,
                61,
                33,
                62,
                63,
                64,
                38,
                65,
                66,
                67,
                68,
                43,
                69,
                70,
                71,
                72,
                73,
            ],
        ),
        Hex27Connectivity(
            [
                4,
                5,
                8,
                7,
                13,
                14,
                17,
                16,
                49,
                61,
                33,
                74,
                50,
                75,
                76,
                63,
                53,
                66,
                77,
                78,
                79,
                57,
                70,
                80,
                81,
                82,
                83,
            ],
        ),
        Hex27Connectivity(
            [
                9,
                10,
                13,
                12,
                18,
                19,
                22,
                21,
                35,
                36,
                84,
                37,
                85,
                38,
                86,
                87,
                88,
                89,
                90,
                91,
                44,
                92,
                93,
                94,
                95,
                96,
                97,
            ],
        ),
        Hex27Connectivity(
            [
                10,
                11,
                14,
                13,
                19,
                20,
                23,
                22,
                51,
                37,
                85,
                52,
                98,
                53,
                99,
                86,
                100,
                90,
                101,
                102,
                58,
                103,
                94,
                104,
                105,
                106,
                107,
            ],
        ),
        Hex27Connectivity(
            [
                12,
                13,
                16,
                15,
                21,
                22,
                25,
                24,
                38,
                65,
                87,
                66,
                86,
                67,
                108,
                109,
                91,
                110,
                111,
                112,
                72,
                95,
                113,
                114,
                115,
                116,
                117,
            ],
        ),
        Hex27Connectivity(
            [
                13,
                14,
                17,
                16,
                22,
                23,
                26,
                25,
                53,
                66,
                86,
                77,
                99,
                78,
                118,
                108,
                102,
                111,
                119,
                120,
                82,
                105,
                114,
                121,
                122,
                123,
                124,
            ],
        ),
    ],
}
