tests/unit_tests/io/snapshots/unit__unit_tests__io__msh__load_msh_cube_hex8.snap
---
source: tests/unit_tests/io/msh.rs
expression: mesh
---
Mesh {
    vertices: [
        [
            0.0,
            0.0,
            0.0,
        ],
        [
            0.5,
            0.0,
            0.0,
        ],
        [
            1.0,
            0.0,
            0.0,
        ],
        [
            0.0,
            0.5,
            0.0,
        ],
        [
            0.5,
            0.5,
            0.0,
        ],
        [
            1.0,
            0.5,
            0.0,
        ],
        [
            0.0,
            1.0,
            0.0,
        ],
        [
            0.5,
            1.0,
            0.0,
        ],
        [
            1.0,
            1.0,
            0.0,
        ],
        [
            0.0,
            0.0,
            0.5,
        ],
        [
            0.5,
            0.0,
            0.5,
        ],
        [
            1.0,
            0.0,
            0.5,
        ],
        [
            0.0,
            0.5,
            0.5,
        ],
        [
            0.5,
            0.5,
            0.5,
        ],
        [
            1.0,
            0.5,
            0.5,
        ],
        [
            0.0,
            1.0,
            0.5,
        ],
        [
            0.5,
            1.0,
            0.5,
        ],
        [
            1.0,
            1.0,
            0.5,
        ],
        [
            0.0,
            0.0,
            1.0,
        ],
        [
            0.5,
            0.0,
            1.0,
        ],
        [
            1.0,
            0.0,
            1.0,
        ],
        [
            0.0,
            0.5,
            1.0,
        ],
        [
            0.5,
            0.5,
            1.0,
        ],
        [
            1.0,
            0.5,
            1.0,
        ],
        [
            0.0,
            1.0,
            1.0,
        ],
        [
            0.5,
            1.0,
            1.0,
        ],
        [
            1.0,
            1.0,
            1.0,
        ],
    ],
    connectivity: [
        Hex8Connectivity(
            [
                0,
                1,
                4,
                3,
                9,
                10,
                13,
                12,
            ],
        ),
        Hex8Connectivity(
            [
                1,
                2,
                5,
                4,
                10,
                11,
                14,
                13,
            ],
        ),
        Hex8Connectivity(
            [
                3,
                4,
                7,
                6,
                12,
                13,
                16,
                15,
            ],
        ),
        Hex8Connectivity(
            [
                4,
                5,
                8,
                7,
                13,
                14,
                17,
                16,
            ],
        ),
        Hex8Connectivity(
            [
                9,
                10,
                13,
                12,
                18,
                19,
                22,
                21,
            ],
        ),
        Hex8Connectivity(
            [
                10,
                11,
                14,
                13,
                19,
                20,
                23,
                22,
            ],
        ),
        Hex8Connectivity(
            [
                12,
                13,
                16,
                15,
                21,
                22,
                25,
                24,
            ],
        ),
        Hex8Connectivity(
            [
                13,
                14,
                17,
                16,
                22,
                23,
                26,
                25,
            ],
        ),
    ],
}
