tests/unit_tests/io/snapshots/unit__unit_tests__io__msh__load_msh_cube_tet10.snap
---
source: tests/unit_tests/io/msh.rs
expression: mesh
---
Mesh {
    vertices: [
        [
            0.0,
            0.0,
            1.0,
        ],
        [
            0.0,
            0.0,
            0.0,
        ],
        [
            0.0,
            1.0,
            1.0,
        ],
        [
            0.0,
            1.0,
            0.0,
        ],
        [
            1.0,
            0.0,
            1.0,
        ],
        [
            1.0,
            0.0,
            0.0,
        ],
        [
            1.0,
            1.0,
            1.0,
        ],
        [
            1.0,
            1.0,
            0.0,
        ],
        [
            0.0,
            0.0,
            0.4999999999999999,
        ],
        [
            0.0,
            0.4999999999999999,
            1.0,
        ],
        [
            0.0,
            1.0,
            0.4999999999999999,
        ],
        [
            0.0,
            0.4999999999999999,
            0.0,
        ],
        [
            1.0,
            0.0,
            0.4999999999999999,
        ],
        [
            1.0,
            0.4999999999999999,
            1.0,
        ],
        [
            1.0,
            1.0,
            0.4999999999999999,
        ],
        [
            1.0,
            0.4999999999999999,
            0.0,
        ],
        [
            0.4999999999999999,
            0.0,
            0.0,
        ],
        [
            0.4999999999999999,
            0.0,
            1.0,
        ],
        [
            0.4999999999999999,
            1.0,
            0.0,
        ],
        [
            0.4999999999999999,
            1.0,
            1.0,
        ],
        [
            0.0,
            0.5,
            0.5,
        ],
        [
            0.0,
            0.25,
            0.75,
        ],
        [
            0.0,
            0.25,
            0.25,
        ],
        [
            0.0,
            0.75,
            0.75,
        ],
        [
            0.0,
            0.75,
            0.25,
        ],
        [
            1.0,
            0.5,
            0.5,
        ],
        [
            1.0,
            0.25,
            0.25,
        ],
        [
            1.0,
            0.25,
            0.75,
        ],
        [
            1.0,
            0.75,
            0.75,
        ],
        [
            1.0,
            0.75,
            0.25,
        ],
        [
            0.5,
            0.0,
            0.5,
        ],
        [
            0.25,
            0.0,
            0.25,
        ],
        [
            0.25,
            0.0,
            0.75,
        ],
        [
            0.75,
            0.0,
            0.75,
        ],
        [
            0.75,
            0.0,
            0.25,
        ],
        [
            0.5,
            1.0,
            0.5,
        ],
        [
            0.25,
            1.0,
            0.75,
        ],
        [
            0.25,
            1.0,
            0.25,
        ],
        [
            0.75,
            1.0,
            0.75,
        ],
        [
            0.75,
            1.0,
            0.25,
        ],
        [
            0.5,
            0.5,
            0.0,
        ],
        [
            0.25,
            0.75,
            0.0,
        ],
        [
            0.25,
            0.25,
            0.0,
        ],
        [
            0.75,
            0.25,
            0.0,
        ],
        [
            0.75,
            0.75,
            0.0,
        ],
        [
            0.5,
            0.5,
            1.0,
        ],
        [
            0.25,
            0.25,
            1.0,
        ],
        [
            0.25,
            0.75,
            1.0,
        ],
        [
            0.75,
            0.25,
            1.0,
        ],
        [
            0.75,
            0.75,
            1.0,
        ],
        [
            0.25,
            0.25,
            0.5,
        ],
        [
            0.25,
            0.5,
            0.75,
        ],
        [
            0.5,
            0.25,
            0.75,
        ],
        [
            0.25,
            0.75,
            0.5,
        ],
        [
            0.5,
            0.5,
            0.5,
        ],
        [
            0.5,
            0.75,
            0.75,
        ],
        [
            0.25,
            0.5,
            0.25,
        ],
        [
            0.5,
            0.75,
            0.25,
        ],
        [
            0.5,
            0.25,
            0.25,
        ],
        [
            0.75,
            0.5,
            0.25,
        ],
        [
            0.75,
            0.25,
            0.5,
        ],
        [
            0.75,
            0.75,
            0.5,
        ],
        [
            0.75,
            0.5,
            0.75,
        ],
    ],
    connectivity: [
        Tet10Connectivity(
            [
                0,
                30,
                20,
                45,
                32,
                50,
                21,
                46,
                51,
                52,
            ],
        ),
        Tet10Connectivity(
            [
                35,
                20,
                30,
                45,
                53,
                50,
                54,
                55,
                52,
                51,
            ],
        ),
        Tet10Connectivity(
            [
                20,
                35,
                2,
                45,
                53,
                36,
                23,
                51,
                47,
                55,
            ],
        ),
        Tet10Connectivity(
            [
                20,
                40,
                35,
                30,
                56,
                57,
                53,
                50,
                54,
                58,
            ],
        ),
        Tet10Connectivity(
            [
                40,
                3,
                35,
                7,
                41,
                37,
                57,
                44,
                39,
                18,
            ],
        ),
        Tet10Connectivity(
            [
                40,
                1,
                20,
                3,
                42,
                22,
                56,
                41,
                24,
                11,
            ],
        ),
        Tet10Connectivity(
            [
                20,
                40,
                3,
                35,
                56,
                41,
                24,
                53,
                37,
                57,
            ],
        ),
        Tet10Connectivity(
            [
                35,
                3,
                20,
                2,
                37,
                24,
                53,
                36,
                23,
                10,
            ],
        ),
        Tet10Connectivity(
            [
                0,
                20,
                2,
                45,
                21,
                23,
                9,
                46,
                47,
                51,
            ],
        ),
        Tet10Connectivity(
            [
                40,
                35,
                30,
                25,
                57,
                54,
                58,
                59,
                60,
                61,
            ],
        ),
        Tet10Connectivity(
            [
                20,
                1,
                40,
                30,
                22,
                42,
                56,
                50,
                58,
                31,
            ],
        ),
        Tet10Connectivity(
            [
                20,
                1,
                30,
                0,
                22,
                31,
                50,
                21,
                32,
                8,
            ],
        ),
        Tet10Connectivity(
            [
                1,
                40,
                30,
                5,
                42,
                58,
                31,
                16,
                34,
                43,
            ],
        ),
        Tet10Connectivity(
            [
                45,
                0,
                30,
                4,
                46,
                32,
                52,
                48,
                33,
                17,
            ],
        ),
        Tet10Connectivity(
            [
                35,
                2,
                45,
                6,
                36,
                47,
                55,
                38,
                49,
                19,
            ],
        ),
        Tet10Connectivity(
            [
                6,
                4,
                45,
                25,
                13,
                48,
                49,
                28,
                62,
                27,
            ],
        ),
        Tet10Connectivity(
            [
                30,
                45,
                4,
                25,
                52,
                48,
                33,
                60,
                27,
                62,
            ],
        ),
        Tet10Connectivity(
            [
                45,
                30,
                35,
                25,
                52,
                54,
                55,
                62,
                61,
                60,
            ],
        ),
        Tet10Connectivity(
            [
                7,
                6,
                35,
                25,
                14,
                38,
                39,
                29,
                61,
                28,
            ],
        ),
        Tet10Connectivity(
            [
                6,
                45,
                35,
                25,
                49,
                55,
                38,
                28,
                61,
                62,
            ],
        ),
        Tet10Connectivity(
            [
                35,
                40,
                7,
                25,
                57,
                44,
                39,
                61,
                29,
                59,
            ],
        ),
        Tet10Connectivity(
            [
                25,
                4,
                30,
                5,
                27,
                33,
                60,
                26,
                34,
                12,
            ],
        ),
        Tet10Connectivity(
            [
                25,
                30,
                40,
                5,
                60,
                58,
                59,
                26,
                43,
                34,
            ],
        ),
        Tet10Connectivity(
            [
                25,
                40,
                7,
                5,
                59,
                44,
                29,
                26,
                15,
                43,
            ],
        ),
    ],
}
