tests/unit_tests/io/snapshots/unit__unit_tests__io__msh__load_msh_cube_tet4.snap
---
source: tests/unit_tests/io/msh.rs
expression: mesh
---
Mesh {
    vertices: [
        [
            0.0,
            0.0,
            1.0,
        ],
        [
            0.0,
            0.0,
            0.0,
        ],
        [
            0.0,
            1.0,
            1.0,
        ],
        [
            0.0,
            1.0,
            0.0,
        ],
        [
            1.0,
            0.0,
            1.0,
        ],
        [
            1.0,
            0.0,
            0.0,
        ],
        [
            1.0,
            1.0,
            1.0,
        ],
        [
            1.0,
            1.0,
            0.0,
        ],
        [
            0.0,
            0.5,
            0.5,
        ],
        [
            1.0,
            0.5,
            0.5,
        ],
        [
            0.5,
            0.0,
            0.5,
        ],
        [
            0.5,
            1.0,
            0.5,
        ],
        [
            0.5,
            0.5,
            0.0,
        ],
        [
            0.5,
            0.5,
            1.0,
        ],
    ],
    connectivity: [
        Tet4Connectivity(
            [
                0,
                10,
                8,
                13,
            ],
        ),
        Tet4Connectivity(
            [
                11,
                8,
                10,
                13,
            ],
        ),
        Tet4Connectivity(
            [
                8,
                11,
                2,
                13,
            ],
        ),
        Tet4Connectivity(
            [
                8,
                12,
                11,
                10,
            ],
        ),
        Tet4Connectivity(
            [
                12,
                3,
                11,
                7,
            ],
        ),
        Tet4Connectivity(
            [
                12,
                1,
                8,
                3,
            ],
        ),
        Tet4Connectivity(
            [
                8,
                12,
                3,
                11,
            ],
        ),
        Tet4Connectivity(
            [
                11,
                3,
                8,
                2,
            ],
        ),
        Tet4Connectivity(
            [
                0,
                8,
                2,
                13,
            ],
        ),
        Tet4Connectivity(
            [
                12,
                11,
                10,
                9,
            ],
        ),
        Tet4Connectivity(
            [
                8,
                1,
                12,
                10,
            ],
        ),
        Tet4Connectivity(
            [
                8,
                1,
                10,
                0,
            ],
        ),
        Tet4Connectivity(
            [
                1,
                12,
                10,
                5,
            ],
        ),
        Tet4Connectivity(
            [
                13,
                0,
                10,
                4,
            ],
        ),
        Tet4Connectivity(
            [
                11,
                2,
                13,
                6,
            ],
        ),
        Tet4Connectivity(
            [
                6,
                4,
                13,
                9,
            ],
        ),
        Tet4Connectivity(
            [
                10,
                13,
                4,
                9,
            ],
        ),
        Tet4Connectivity(
            [
                13,
                10,
                11,
                9,
            ],
        ),
        Tet4Connectivity(
            [
                7,
                6,
                11,
                9,
            ],
        ),
        Tet4Connectivity(
            [
                6,
                13,
                11,
                9,
            ],
        ),
        Tet4Connectivity(
            [
                11,
                12,
                7,
                9,
            ],
        ),
        Tet4Connectivity(
            [
                9,
                4,
                10,
                5,
            ],
        ),
        Tet4Connectivity(
            [
                9,
                10,
                12,
                5,
            ],
        ),
        Tet4Connectivity(
            [
                9,
                12,
                7,
                5,
            ],
        ),
    ],
}
